added body and formatted with one large section

--- a/mod3sol/index.html
+++ b/mod3sol/index.html
@@ -18,29 +18,68 @@
   </head>
 <body>
   <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Food, LLC</a>
-    </div>
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Food, LLC</a>
+      </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right visible-xs">
-        <li class="active"><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Beef</a></li>
-        <li><a href='#'>Sushi</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right visible-xs">
+          <li class="active"><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
+          <li><a href="#">Beef</a></li>
+          <li><a href='#'>Sushi</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+  
   <h1 class="text-center">Our Menu</h1>
+
+  <div class="container" id="descriptions">
+    <div class="col-xs-12">
+      <h3 class="text-center">Chicken</h3>
+      <p>Lorem ipsum dolor sit amet, harum integre postulant vim ei. Ei harum everti animal ius, eum ei numquam postulant suavitate. Usu et ipsum veritus, vel in sadipscing definitiones. Ex omnis choro euripidis vix, eu sanctus inimicus nec, sumo malorum legendos id sit. Mutat ridens vel ut.
+
+      Pro in labore deseruisse, oblique diceret at pro. Utinam graece in usu, cu nisl fabulas omittantur vis, aeque ancillae concludaturque ex est. Interesset reprehendunt an mel. Ea cum ferri legere appetere.
+
+      Sit id purto lorem quaerendum. Porro molestie instructior sed in, in vitae petentium interesset usu. In vis quot cibo comprehensam, in legendos repudiandae sed, sit an utinam melius labitur. Aperiri civibus perpetua ex duo.
+
+      Viderer praesent principes sea ne, aliquando efficiantur vis ei, eu ullum commune vis. Et esse ipsum altera vix. Sed utroque habemus postulant ne. Vis ex exerci munere dissentias, est partem sapientem complectitur et. Vim te populo hendrerit, quo iisque utroque inciderint in, graecis suscipiantur mea ne.
+
+      Id vel agam phaedrum. Nam dico malis at, id quo dolor euismod. Erant splendide mei eu. Eu eos denique principes, inciderint suscipiantur nec ne.</p>
+
+      <h3 class="text-center">Beef</h3>
+      <p>Lorem ipsum dolor sit amet, harum integre postulant vim ei. Ei harum everti animal ius, eum ei numquam postulant suavitate. Usu et ipsum veritus, vel in sadipscing definitiones. Ex omnis choro euripidis vix, eu sanctus inimicus nec, sumo malorum legendos id sit. Mutat ridens vel ut.
+
+      Pro in labore deseruisse, oblique diceret at pro. Utinam graece in usu, cu nisl fabulas omittantur vis, aeque ancillae concludaturque ex est. Interesset reprehendunt an mel. Ea cum ferri legere appetere.
+
+      Sit id purto lorem quaerendum. Porro molestie instructior sed in, in vitae petentium interesset usu. In vis quot cibo comprehensam, in legendos repudiandae sed, sit an utinam melius labitur. Aperiri civibus perpetua ex duo.
+
+      Viderer praesent principes sea ne, aliquando efficiantur vis ei, eu ullum commune vis. Et esse ipsum altera vix. Sed utroque habemus postulant ne. Vis ex exerci munere dissentias, est partem sapientem complectitur et. Vim te populo hendrerit, quo iisque utroque inciderint in, graecis suscipiantur mea ne.
+
+      Id vel agam phaedrum. Nam dico malis at, id quo dolor euismod. Erant splendide mei eu. Eu eos denique principes, inciderint suscipiantur nec ne.</p>
+
+      <h3 class="text-center">Sushi</h3>
+      <p>Lorem ipsum dolor sit amet, harum integre postulant vim ei. Ei harum everti animal ius, eum ei numquam postulant suavitate. Usu et ipsum veritus, vel in sadipscing definitiones. Ex omnis choro euripidis vix, eu sanctus inimicus nec, sumo malorum legendos id sit. Mutat ridens vel ut.
+
+      Pro in labore deseruisse, oblique diceret at pro. Utinam graece in usu, cu nisl fabulas omittantur vis, aeque ancillae concludaturque ex est. Interesset reprehendunt an mel. Ea cum ferri legere appetere.
+
+      Sit id purto lorem quaerendum. Porro molestie instructior sed in, in vitae petentium interesset usu. In vis quot cibo comprehensam, in legendos repudiandae sed, sit an utinam melius labitur. Aperiri civibus perpetua ex duo.
+
+      Viderer praesent principes sea ne, aliquando efficiantur vis ei, eu ullum commune vis. Et esse ipsum altera vix. Sed utroque habemus postulant ne. Vis ex exerci munere dissentias, est partem sapientem complectitur et. Vim te populo hendrerit, quo iisque utroque inciderint in, graecis suscipiantur mea ne.
+
+      Id vel agam phaedrum. Nam dico malis at, id quo dolor euismod. Erant splendide mei eu. Eu eos denique principes, inciderint suscipiantur nec ne.</p>
+    </div>
+  </div>
+
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
