--- a/mod3sol/index.html
+++ b/mod3sol/index.html
@@ -33,9 +33,9 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right visible-xs">
-          <li class="active"><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Beef</a></li>
-          <li><a href='#'>Sushi</a></li>
+          <li class="active text-center"><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
+          <li><a class="text-center" href="#">Beef</a></li>
+          <li><a class="text-center" href='#'>Sushi</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
